# Amethyst-Breakout

./: .gitignore  Cargo.toml  README.md
assets/images/: blocks.ron
assets/sprites/: ball.ron  paddles.ron
assets/stages/: 0.ron  99.ron
config/: bindings.ron  camera.ron  display.ron
src/: bundle.rs  main.rs
src/components/: animator.rs  ball.rs  block.rs  mod.rs  paddle.rs
src/resources/: assets.rs
src/settings/: bindings.rs  mod.rs
src/states/: game.rs  load.rs  menu.rs  mod.rs
src/systems/: animator.rs  ball.rs  block.rs  bounce.rs  mod.rs  paddle.rs
src/utils/: mod.rs  types.rs
utils/: create_stage1.py
